refactor: OpenRouter
